--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
      <h1 class="logo">Olga Timbur</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="#" target="_blank">Name of project goes here</a>
-            <a href="#" target="_blank">Name of project goes here</a>
+            <a href="https://otimbur.github.io/portal-it115/" target="_blank">My Portal</a>
+            <a href="https://www.instagram.com/otimbur07/" target="_blank">Instagram</a>
             <a href="https://github.com/otimbur" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/olga-timbur-072817236/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
